src/styles/app.css
/* ... */
p {
  font-weight: var(--font-normal);
  opacity: var(--lighten-text);
  font-size: var(--font-small);
}

@media (min-width: 25em) {
  p {
    font-size: calc(var(--font-small) * 1.1);
  }
}
@media (min-width: 37.5em) {
  p {
    font-size: calc(var(--font-small) * 1.2);
  }
}
@media (min-width: 48em) {
  p {
    font-size: calc(var(--font-small) * 1.3);
  }
}
@media (min-width: 60em) {
  p {
    font-size: calc(var(--font-small) * 1.4);
  }
}
@media (min-width: 85.375em) {
  p {
    font-size: calc(var(--font-small) * 1.5);
  }
}
@media (min-width: 120em) {
  p {
    font-size: calc(var(--font-small) * 1.6);
  }
}

.font-green {
  color: var(--color-light-green);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  opacity: 0.7;
  line-height: 1.15;
  font-weight: var(--font-normal);
  text-rendering: optimizeLegibility;
}

h1 {
  margin: 1.5em 0 0.5em 0;
  font-weight: 700;
  font-size: var(--font-large);
}

@media (min-width: 25em) {
  h1 {
    font-size: calc(var(--font-large) * 1.1);
  }
}
@media (min-width: 37.5em) {
  h1 {
    font-size: calc(var(--font-large) * 1.2);
  }
}
@media (min-width: 48em) {
  h1 {
    font-size: calc(var(--font-large) * 1.3);
  }
}
@media (min-width: 60em) {
  h1 {
    font-size: calc(var(--font-large) * 1.4);
  }
}
@media (min-width: 85.375em) {
  h1 {
    font-size: calc(var(--font-large) * 1.5);
  }
}
@media (min-width: 120em) {
  h1 {
    font-size: calc(var(--font-large) * 1.6);
  }
}

h2 {
  margin: 1.5em 0 0.5em 0;
  font-weight: 600;
  font-size: calc(var(--font-medium) * 1.2);
}
@media (min-width: 25em) {
  h2 {
    font-size: calc(var(--font-medium) * 1.3);
  }
}

@media (min-width: 48em) {
  h2 {
    font-size: calc(var(--font-medium) * 1.3);
  }
}

@media (min-width: 60em) {
  h2 {
    font-size: calc(var(--font-medium) * 1.1);
  }
}

@media (min-width: 85.375em) {
  h2 {
    font-size: calc(var(--font-medium) * 1.2);
  }
}

@media (min-width: 120em) {
  h2 {
    font-size: calc(var(--font-medium) * 1.7);
  }
}

h3 {
  margin: 1.5em 0 0.5em 0;
  font-size: 1.8rem;
  font-weight: 500;
}
@media (max-width: 680px) {
  h3 {
    font-size: 1.7rem;
  }
}

h4 {
  margin: 1.5em 0 0.5em 0;
  font-size: 1.6rem;
  font-weight: 500;
}

h5 {
  margin: 1.5em 0 0.5em 0;
  font-size: 1.4rem;
  font-weight: 500;
}

h6 {
  margin: 1.5em 0 0.5em 0;
  font-size: 1.4rem;
  font-weight: 500;
}

/* Layout
/* ---------------------------------------------------------- */

/* Spacing */
.spacing-v-sm {
  padding: var(--padding-v-sm) 0;
}
.spacing-v-md {
  padding: var(--padding-v-md) 0;
}
.spacing-v-lg {
  padding: var(--padding-v-lg) 0;
}
.spacing-h-sm {
  padding: 0 var(--padding-h-sm);
}
.spacing-h-md {
  padding: 0 var(--padding-h-md);
}
.spacing-h-lg {
  padding: 0 var(--padding-h-lg);
}
.spacing-sm {
  padding: var(--padding-v-sm);
}
.spacing-md {
  padding: var(--padding-v-md);
}
.spacing-lg {
  padding: var(--padding-v-lg);
}
.max-width {
  margin: 0 6%;
}

@media (min-width: 37.5em) {
  .max-width {
    margin: 0 12%;
  }
}
@media (min-width: 48em) {
  .max-width {
    margin: 0 16%;
  }
}
@media (min-width: 60em) {
  .max-width {
    margin: 0 18%;
  }
}

.max-width-70 {
  max-width: 70%;
}
.text-align-center {
  text-align: center;
}
/* Flex */
.flex {
  display: flex;
}
.flex-column {
  flex-direction: column;
}
.flex-center-vertical {
  align-items: center;
}
.flex-start {
  justify-content: start;
}
.flex-center-horizontal {
  justify-content: center;
}
.flex-space-evenly {
  justify-content: space-evenly;
}
.flex-space-around {
  justify-content: space-around;
}
.flex-space-between {
  justify-content: space-between;
}
.flex-wrap {
  flex-wrap: wrap;
}
.flex-grow-one {
  flex-grow: 1;
}
/* Grid */
.grid-primary {
  display: grid;
  grid-auto-rows: 1fr; 
  grid-auto-columns: 1fr; 
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
}

.grid-primary > a {
  display: flex;
  min-width: 0;
}

.grid-primary .card-description {
  padding: 0.5em 1em;
  font-size: 0.8em;
  flex: 1;
  display: flex;
  position: relative;
}

.headerHome {
  background-image: url("https://proorganica-m.netlify.app/static/46f013567c254dbc977ff51ac9df0e42/b2131/proorganica-home-hero.jpg");
  background-size: cover;
  background-position-y: center;
  background-position-x: center;
}

.HomeHero {
  height: 78vh;
  position: relative;
  display: flex;
  align-content: center;
  justify-content: center;
}

.HomeHero__Image {
  width: 40%;
  height: auto;
  margin-top: -14rem;
}

.card {display: flex; flex-direction: column;}

@media (max-width: 65em) {
  .grid-primary {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 48em) {

  .HomeHero__Image {
    width: 70%;
    height: auto;
    margin-top: -8rem;
  }

  .HomeHero {
    height: 25vh;
  }

  .grid-primary {
    grid-template-columns: 1fr;
  }
}

.grid-secondary {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
}

@media (max-width: 48em) {
  .grid-secondary {
    grid-template-columns: 1fr;
  }
}

.grid-tertiary {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
}

@media (max-width: 48em) {
  .grid-tertiary {
    grid-template-columns: repeat(3, 1fr);
  }
}
@media (max-width: 37.5em) {
  .grid-tertiary {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media (max-width: 25em) {
  .grid-tertiary {
    grid-template-columns: 1fr;
  }
}

/* Components */

/* Header
/* ---------------------------------------------------------- */
.site-banner {
  display: flex;
  justify-content: center;
  align-items: center;
  /* tame the gatsby image */
  padding: 10vw;
}

.site-banner > * {
  flex-grow: 1;
}

.footer {
  border-top: 3px var(--color-light-grey) solid;
  background: var(--color-light-green);
}
.header {
  border-bottom: 3px var(--color-light-grey) solid;
  background-color: var(--color-light-green);
}
.header a {
  /* font-size: var(--font-small); */
  font-weight: var(--font-bold);
  padding: 5px 10px;
}
.footer a,
.header a {
  opacity: 0.8;
}
/* ... */

